// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render tests should render the Chat Bubble with a child if one is passed 1`] = `
<div
  class="MuiBox-root css-u9ttk8"
  data-testid="chat-message-bubble-container-6e685eeb-2b54-432a-8b66-8a81633b3981"
  origin="COMPASS"
>
  <p
    class="MuiTypography-root MuiTypography-body1 css-13zm2uq-MuiTypography-root"
    data-testid="chat-message-bubble-message-text-6e685eeb-2b54-432a-8b66-8a81633b3981"
  >
    Hello, I'm Compass
  </p>
  <div
    class="MuiBox-root css-0"
    data-testid="chat-message-bubble-message-footer-container-6e685eeb-2b54-432a-8b66-8a81633b3981"
  >
    <div
      data-testid="foo-footer"
    >
      foo child
    </div>
  </div>
</div>
`;

exports[`render tests should render the Chat Bubble without a child if none is passed 1`] = `
<div
  class="MuiBox-root css-u9ttk8"
  data-testid="chat-message-bubble-container-6e685eeb-2b54-432a-8b66-8a81633b3981"
  origin="COMPASS"
>
  <p
    class="MuiTypography-root MuiTypography-body1 css-13zm2uq-MuiTypography-root"
    data-testid="chat-message-bubble-message-text-6e685eeb-2b54-432a-8b66-8a81633b3981"
  >
    Hello, I'm Compass
  </p>
  <div
    class="MuiBox-root css-0"
    data-testid="chat-message-bubble-message-footer-container-6e685eeb-2b54-432a-8b66-8a81633b3981"
  />
</div>
`;
